# Green3Neo

./: .env  .gitignore  .justfile  README.md
.github/actions/install-backend-dependencies/: action.yml
.github/actions/install-frontend-dependencies/: action.yml
.github/actions/prepare-application-build/: action.yml
.github/actions/prepare-application-run/: action.yml
.github/actions/prepare-backend-build/: action.yml
.github/actions/prepare-frontend-build/: action.yml
.github/actions/prepare-repo/: actions.yml
.github/actions/setup-postgre/: action.yml
.github/workflows/: build-all.yml  prepare-repo.yml  run.yml  test.yml
backend/: .gitignore  .nextest.toml  Cargo.toml
backend/backend_api/: Cargo.toml
backend/backend_api/src/: lib.rs
backend/backend_api/src/api/: init.rs  mod.rs
backend/backend_logging/: Cargo.toml
backend/backend_logging/src/: logging.rs
backend/backend_macros/: Cargo.toml
backend/backend_paths/: Cargo.toml
backend/backend_paths/src/: paths.rs
backend/backend_testing/: Cargo.toml
backend/backend_testing/src/testing/: mod.rs
backend/database_api/: Cargo.toml
backend/database_api/src/: database.rs  lib.rs
backend/database_api/src/api/: member.rs
backend/database_types/: Cargo.toml
backend/database_types/src/: connection_description.rs  lib.rs
backend/interface/backend_api/: Cargo.toml
backend/interface/backend_api/src/api/: init.rs  logging.rs  mod.rs  paths.rs  profile.rs
backend/interface/database_api/: Cargo.toml
backend/interface/database_api/src/: database.rs  schema.rs
backend/interface/database_api/src/api/: init.rs  member.rs  mod.rs  models.rs
backend/interface/sepa_api/: Cargo.toml
backend/interface/sepa_api/src/: lib.rs
backend/interface/sepa_api/src/api/: creditor.rs  debitor.rs  generation.rs  iban.rs  init.rs  mod.rs  name.rs  transaction.rs
backend/interface/sepa_api/src/schemas_test/: mod.rs
backend/sepa_types/: Cargo.toml
backend/sepa_types/src/: creditor.rs  creditor_id.rs  debitor.rs  iban.rs  lib.rs  mandate.rs  mandate_id.rs  name.rs  purpose.rs  transaction.rs
backend/sepa_xsd_to_rust_generator/: Cargo.toml
backend/sepa_xsd_to_rust_generator/schemas/: README.md
backend/sepa_xsd_to_rust_generator/src/: main.rs
backend/src/: database.rs  lib.rs  logging.rs
backend/src/api/: init.rs  member.rs  mod.rs
backend/src/fixtures/: allsupportedtypes.sql
frontend/: .gitignore  l10n.yaml  pubspec.yaml
frontend/lib/: change_record_utility.dart  data_table_page.dart  loaded_profile.dart  localizer.dart  main.dart  member_management_page.dart  table_view.dart
frontend/lib/components/: table_view.dart
frontend/lib/components/form_fields/: creditor_iban_field.dart  creditor_id_field.dart  creditor_name_field.dart  currency_field.dart  form_text_field.dart  message_id_field.dart  purpose_field.dart
frontend/lib/features/: feature.dart  loaded_profile.dart  widget_feature.dart
frontend/lib/features/management_mode/: management_mode.dart  member_view.dart
frontend/lib/features/management_mode/member_management/: change_record_utility.dart  member_management_mode.dart
frontend/lib/features/management_mode/member_management_mode/: page.dart
frontend/lib/features/management_mode/sepa_management/: sepa_generation_wizard.dart  sepa_management_mode.dart
frontend/lib/features/management_mode/view_management/: view_management_mode.dart
frontend/lib/features/member_management/: change_record_utility.dart  member_management_page.dart
frontend/lib/l10n/: app_de.arb  app_en.arb
frontend/linux/: CMakeLists.txt
frontend/test/: member_management_page_test.dart  table_view_test.dart
frontend/test/components/: table_view_test.dart
frontend/test/features/member_management/: member_management_page_test.dart
green3neo/: .env  .gitignore  .justfile  justfile  pubspec.yaml
green3neo/android/app/: build.gradle
green3neo/android/app/src/main/: AndroidManifest.xml
green3neo/android/app/src/main/kotlin/com/example/green3neo/: MainActivity.kt
green3neo/android/gradle/wrapper/: gradle-wrapper.properties
green3neo/backend/: Cargo.toml  build.rs
green3neo/backend/src/: api.rs  lib.rs
green3neo/backend/src/api/: dummy.rs  member.rs
green3neo/backend_macros/src/: lib.rs
green3neo/ios/Runner/: Info.plist
green3neo/ios/Runner.xcodeproj/: project.pbxproj
green3neo/lib/: data_table_page.dart  data_view.dart  ffi.dart  main.dart  reflectable.dart  table_view.dart
green3neo/linux/: CMakeLists.txt  my_application.cc
green3neo/macos/Runner.xcodeproj/: project.pbxproj
green3neo/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
green3neo/macos/Runner/Configs/: AppInfo.xcconfig
green3neo/patches/: models.dart.patch  models.patch  models.rs.patch
green3neo/tasks/: create_db_tables.py  create_db_tables.zsh  delete_db_tables.py  delete_db_tables.zsh  populate_db_tables.py  populate_db_tables.zsh
green3neo/tasks/resources/: dummyData.sql  dummyData_withDates.sql
green3neo/tasks/subtasks/: activateVenv.zsh  deactivateVenv.zsh
green3neo/tasks/task_lib/: db_connection.py
green3neo/web/: index.html  manifest.json
green3neo/windows/: CMakeLists.txt  rust.cmake
green3neo/windows/runner/: Runner.rc  main.cpp
patches/backend/: models.rs.patch
patches/backend/database_api/: models.rs.patch
patches/backend/database_api/api/: models.rs.patch
patches/backend/interface/database_api/api/: models.rs.patch
patches/frontend/: frb_generated.dart.patch  models.dart.patch
patches/frontend/database_api/: frb_generated.dart.patch  models.dart.patch
patches/frontend/database_api/api/: models.dart.patch
patches/frontend/interface/database_api/: frb_generated.dart.alternative.patch  frb_generated.dart.patch
patches/frontend/interface/database_api/api/: models.dart.patch
tasks/: create_db_tables.py
tasks/resources/: dummyData_withDates.sql
tasks/task_lib/: db_connection.py
