[package]
name = "backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "backend"
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
flutter_rust_bridge_codegen = "2.0.0-dev.19"
dotenv = "0.15.0"

[dependencies]
flutter_rust_bridge = "2.0.0-dev.19"
rand = "0.8.4"
diesel = {version = "2.1.2", features = ["postgres"]}
