[package]
name = "sepa_api"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
flutter_rust_bridge_codegen = "=2.11.1"

[dev-dependencies]
backend_testing = { path = "../../backend_testing" }
speculoos = "0.11.0"

[dependencies]
chrono = { version = "^0.4.42", features = ["alloc", "unstable-locales"] }
flutter_rust_bridge = "=2.11.1"
xsd-parser-types = { version = "^0.1.2", features = ["quick-xml"] }
