[package]
name = "sepa_api"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
flutter_rust_bridge_codegen = "=2.11.1"

[dev-dependencies]
backend_testing = { path = "../../backend_testing" }
log = "0.4.25"
speculoos = "0.11.0"

[dependencies]
backend_logging = { path = "../../backend_logging" }
sepa_types = { path = "../../sepa_types" }
chrono = { version = "^0.4.42", features = ["alloc", "unstable-locales"] }
flexi_logger = { version = "0.29.8", features = [
    "async",
    "colors",
    "specfile",
] }
flutter_rust_bridge = { version = "=2.11.1", features = ["chrono"] }
xsd-parser-types = { version = "^0.1.2", features = ["quick-xml"] }
